youfull/objects/Market__c.object
<CustomObject>
    <fields>
        <fullName>ALMPlus_Calendar__c</fullName>
        <label>ALMPlus Calendar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALM_Rep_Indicator__c</fullName>
        <label>ALM Rep Indicator</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASLF_Market_Id__c</fullName>
        <label>ASLF Market Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASLF_Report_Url__c</fullName>
        <label>ASLF Report Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASLF_Timezone_Offset__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Timezone differential from your ASLF host. For example Bucharest is GMT+2 and is hosted in Corby (GMT) so the offset is -2.</inlineHelpText>
        <label>ASLF Timezone Offset</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Action_Alert_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action Alert Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action_Alerts__c</fullName>
        <label>Action Alerts</label>
        <picklist>
            <picklistValues>
                <fullName>Rising Stars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title at Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Promoted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured Product no activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New and In-Progress Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders Not submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders Over Minimum to earn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders Received Billed and Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders Received In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders under minimum to earn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reps with overdue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team sales above minimum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team sales below minimum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Anniversary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downline PSQ not achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G1 Appointments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G1 Candidates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inherited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOA 0-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Repr LOA 0</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Action_Item_Mail_Plans__c</fullName>
        <label>Action_Item_Mail_Plans</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allow_Free_Emails_For__c</fullName>
        <description>Controls the free-form emailing functionality. If G1 is selected - free-form emails can only be sent to G1 Sales Leaders. &apos;All&apos; - to all people in the downline</description>
        <inlineHelpText>Controls the free-form emailing functionality. If G1 is selected - free-form emails can only be sent to G1 Sales Leaders. &apos;All&apos; - to all people in the downline</inlineHelpText>
        <label>Allow_Free_Emails_For</label>
        <picklist>
            <picklistValues>
                <fullName>G1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allow_Freeform_Email__c</fullName>
        <description>Profile allowed to send freeform emails</description>
        <inlineHelpText>Profile allowed to send freeform emails</inlineHelpText>
        <label>Allow Freeform Email</label>
        <picklist>
            <picklistValues>
                <fullName>Avon Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Zone Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Division Manager</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Available_Languages__c</fullName>
        <label>Available Languages</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es_MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>uk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_PH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr_CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt_BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>et</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lt</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Batch_Load_In_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to be set by CDW when starting the nightly batch and reset after its complete.</description>
        <inlineHelpText>Flag to be set by CDW when starting the nightly batch and reset after its complete.</inlineHelpText>
        <label>Batch Load In Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Load_Strt_Dt__c</fullName>
        <description>The date time when CDW started the batch process. This field is set by a workflow rule based on the flag value.</description>
        <label>Batch Load Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Business_Plan_KPIs__c</fullName>
        <description>This field decides which KPIs need to be shown in the 90DBP</description>
        <inlineHelpText>This field decides which KPIs need to be shown in the 90DBP</inlineHelpText>
        <label>Business Plan KPIs</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDW_DEDUCTED_RETURNS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CDW populates as true if the Market deducts returns, and the campaign has not gone through the EOC leadership, else it is false.</description>
        <label>CDW Deducted Returns Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPGN_END_DT__c</fullName>
        <label>CMPGN_END_DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPGN_NR_NUMBER__c</fullName>
        <description>Converts CMPGN_NR__C to Number</description>
        <formula>VALUE(CMPGN_NR__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMPGN_NR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPGN_NR__c</fullName>
        <label>CMPGN_NR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPGN_STRT_DT__c</fullName>
        <label>CMPGN_STRT_DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CURRENT_CAMPAIGN_NR__c</fullName>
        <formula>RIGHT(CMPGN_NR__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Campaign Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CURRENT_QRTR__c</fullName>
        <description>Current Quarter number. Format: YYYY-Q#, e.g 2012-Q1</description>
        <inlineHelpText>Current Quarter number. Format: YYYY-Q#, e.g 2012-Q1</inlineHelpText>
        <label>CURRENT_QRTR</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CURRNT_CMPGN_MAIL_RMN_DAY_CNT__c</fullName>
        <label>Remaining days to Mail Order</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CURRNT_CMPGN_ONLN_RMN_DAY_CNT__c</fullName>
        <label>Remaining days to Online Order</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CURRNT_CMPGN_RMN_DAY_CNT__c</fullName>
        <label>CURRNT_CMPGN_RMN_DAY_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CURRNT_CYCLE_CMPGN_CNT__c</fullName>
        <label>Curr no of campaign Cycle in Top  Seller</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CURR_OR_PREV_CMPGN_NR__c</fullName>
        <formula>IF (Campaign_NR_Changed__c, PREV_1_CMPGN_NR__c, CMPGN_NR__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CURR OR PREV CMPGN NR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_NR_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by MarketTrigger whenever the campaign number is changed on market record. This flag is reset by LeadMetricsBatch class.</description>
        <inlineHelpText>Set by MarketTrigger whenever the campaign number is changed on market record. This flag is reset by LeadMetricsBatch class.</inlineHelpText>
        <label>Campaign NR Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Report_Override_URL__c</fullName>
        <label>Campaign Report Override URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditions_Of_Use_URL__c</fullName>
        <label>Conditions Of Use URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Symbol_Code__c</fullName>
        <description>Currency code for the market, e.g. code for &apos;$&apos; symbol is &amp;#36;</description>
        <inlineHelpText>Currency code for the market, e.g. code for &apos;$&apos; symbol is &amp;#36;</inlineHelpText>
        <label>Currency Symbol Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEDUCT_RETURNS_ON_SALES__c</fullName>
        <defaultValue>true</defaultValue>
        <description>True if the Market deducts returns when displaying.</description>
        <label>Deduct Returns Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EARN_ILLT_VIDEO_LNK_TYP__c</fullName>
        <label>Erng Illustrtor Video Lnk Typ</label>
        <picklist>
            <picklistValues>
                <fullName>Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video-Windows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video-Quick Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video-You Tube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widget</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EOC_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>End Of Campaign Indicator. Used to trigger data clean up activities. This flag is set by a manual process once the campaign is finished.</description>
        <inlineHelpText>End Of Campaign Indicator. Used to trigger data clean up activities. This flag is set by a manual process once the campaign is finished.</inlineHelpText>
        <label>EOC_IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligibility_No_Flags__c</fullName>
        <description>Market-specific set of eligibility flags that should be considered while computing the value of the 	Is_Eligible__c field. The flags must be set to &apos;No&apos;/False for user to be eligible</description>
        <inlineHelpText>Select User fields that must be set to &apos;No&apos;/False for user to be eligible. E.g. 
&apos;System Override&apos; must be set to &apos;No&apos;/False</inlineHelpText>
        <label>Eligibility No Flags</label>
        <picklist>
            <picklistValues>
                <fullName>ZM_Override__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System_Override__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out_of_Office__c</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Eligibility_Yes_Flags__c</fullName>
        <description>Market-specific set of eligibility flags that should be considered while computing the value of the 	Is_Eligible__c field. The flags must be set to True for user to be eligible</description>
        <inlineHelpText>Select User fields that must be set to &apos;Yes&apos;/True for user to be eligible. E.g. Opt-In must be set to &apos;Yes&apos;/True</inlineHelpText>
        <label>Eligibility Yes Flags</label>
        <picklist>
            <picklistValues>
                <fullName>Opt_In__c</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Enable_Legal_Purge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Legal purge process is invoked once a day only if this flag is turned on. This flag can be controlled separately for different markets. For more details, visit LegalPurgeScheduler apex class.</description>
        <inlineHelpText>Legal purge process is invoked once a day only if this flag is turned on. This flag can be controlled separately for different markets. For more details, visit LegalPurgeScheduler apex class.</inlineHelpText>
        <label>Enable Legal Purge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enabled_Action_Item__c</fullName>
        <label>Enabled Action Item</label>
        <picklist>
            <picklistValues>
                <fullName>Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Business</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Escalation_Period__c</fullName>
        <description>Lead Escalation Period in hours</description>
        <inlineHelpText>Lead Escalation Period in hours</inlineHelpText>
        <label>Escalation Period (Hours)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Title_Nbr__c</fullName>
        <label>Executive Title Nbr</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GI3_Keep_Alive_URL__c</fullName>
        <label>GI3 Keep Alive URL</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genealogy_Cleanup_Batch_Size__c</fullName>
        <inlineHelpText>Should not be null, Default value set to 10000, ideal range would depend on the market data.Advised Range should be 25000 - 35000</inlineHelpText>
        <label>Genealogy Cleanup Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Genealogy_Cleanup_Campaign__c</fullName>
        <label>Genealogy Cleanup Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genealogy_Overlay_Section__c</fullName>
        <label>Genealogy Overlay Section</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Genealogy_Report_Configurable__c</fullName>
        <label>Genealogy Report Configurable</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Genealogy_Root_Node_Section__c</fullName>
        <label>Genealogy Root Node Section</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hide_Last_Campaign_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Last Campaign Analysis?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Next_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Next Campaign data will be hidden from  KPI Summary 1 table on &quot;KPIs at a Glance&quot; tab.</description>
        <label>Hide Next Campaign?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Suggested_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Suggested Activities?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_ALMPLUS_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to enable/disable ALM+ functionality</description>
        <inlineHelpText>Check to enable/disable ALM+ functionality</inlineHelpText>
        <label>Is ALM+ Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Branch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Executive_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Executive_Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Future_Campaign_Filter_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls the future campaign filter value market-wide. If set to true future campaign filtering becomes enabled for all reports</description>
        <inlineHelpText>Controls the future campaign filter value market-wide. If set to true future campaign filtering becomes enabled for all reports</inlineHelpText>
        <label>Is Future Campaign Filter Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_ZM_Override_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZM Override Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPI_Measurement_Field__c</fullName>
        <inlineHelpText>Field that is displayed on the KPI at a glance as its measurement field . This will either be a difference value or a percent variance value.</inlineHelpText>
        <label>KPI Measurement Field</label>
        <picklist>
            <picklistValues>
                <fullName>Percent Attainment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Difference</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LAST_UPDT_DT__c</fullName>
        <label>LAST_UPDT_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadMandatoryFields__c</fullName>
        <description>Mandatory fields for the Lead Entry Form</description>
        <inlineHelpText>Mandatory fields for the Lead Entry Form</inlineHelpText>
        <label>Lead Mandatory Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Conditions_Of_Use_URL__c</fullName>
        <label>Lead Conditions Of Use URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Escalation_Age__c</fullName>
        <description>Lead Age in hours, at which, if not contacted it gets rejected</description>
        <inlineHelpText>Lead Age in hours, at which, if not contacted it gets rejected</inlineHelpText>
        <label>Lead Escalation Age (Hours)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Maximum_Age__c</fullName>
        <description>Maximum allowed age for a lead</description>
        <inlineHelpText>Maximum allowed age for a lead</inlineHelpText>
        <label>Lead Maximum Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Minimum_Age__c</fullName>
        <description>Minimum allowed age for a lead</description>
        <inlineHelpText>Minimum allowed age for a lead</inlineHelpText>
        <label>Lead Minimum Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Purge_Min__c</fullName>
        <label>Lead Purge Min Age</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Security_and_Privacy_URL__c</fullName>
        <label>Lead Security and Privacy URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Exclusions__c</fullName>
        <description>Contains Lead Source values that should be excluded for the market</description>
        <inlineHelpText>Contains Lead Source values that should be excluded for the market</inlineHelpText>
        <label>Lead Source Exclusions</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friends/relatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPs own advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed media advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquaintance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Leader Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Questioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search - Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search - Yandex</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Legal_Purge_Age__c</fullName>
        <description>Unit is in hours. After the specified hours are elapsed, the leads associated to this market will be deleted after applying few other conditions which are specified in Legal_Purge_SOQL_Condition field on this market record.</description>
        <inlineHelpText>Unit is in hours. After the specified hours are elapsed, the leads associated to this market will be deleted after applying few other conditions which are specified in Legal_Purge_SOQL_Condition field on this market record.</inlineHelpText>
        <label>Legal Purge Age</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Purge_SOQL_Condition__c</fullName>
        <description>Used to purge unused leads. Details can be seen in LegalPurgeScheduler apex class. Include ONLY the where condition (without WHERE keyword) in this field. The full SOQL is prepared inside the apex class.</description>
        <inlineHelpText>Used to purge unused leads. Details can be seen in LegalPurgeScheduler apex class. Include ONLY the where condition (without WHERE keyword) in this field. The full SOQL is prepared inside the apex class.</inlineHelpText>
        <label>Legal Purge SOQL Condition</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MAX_CMPGN_INACTV_CNT__c</fullName>
        <label># Inactive Campaigns before Removal</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailPlan_LndingPg_Deflt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked-Selling Campaign Default,UnChecked-Current Campaign Default</inlineHelpText>
        <label>MailPlan_LndingPg_Deflt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mail_Plan_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail Plan Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Administrator__c</fullName>
        <label>Market Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Markets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Currency_Symbol__c</fullName>
        <description>it denotes the currency symbol to be used in Coaching record page.</description>
        <label>Market Currency Symbol</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Id__c</fullName>
        <externalId>true</externalId>
        <label>MRKT_ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Max_Ldr_Titl_LVL__c</fullName>
        <label>Max_Ldr_Titl_LVL</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mgr_Omniture_Suite_Name__c</fullName>
        <description>This Suite is used for ZM/DM Omniture tracking.</description>
        <label>Mgr Omniture Suite Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_to_Earn__c</fullName>
        <inlineHelpText>Minimum value to earn.  Currently is used in the my team orders report for a filter.</inlineHelpText>
        <label>Minimum to Earn</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT_1_CMPGN_NR__c</fullName>
        <label>NEXT_1_CMPGN_NR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRT_ACTIVE_USES_NET__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this market use the net value (positive – returns) for determining active?  Otherwise, it would use positive orders only.</description>
        <label>NRT Active Users Net</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NRT_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to determine, if this market is participating in NRT or not.</description>
        <label>NRT Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NRT_HAS_DLY_INVC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this market support intraday updates for Invoiced orders?</description>
        <label>NRT Has Daily Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NRT_HAS_SUBMTD_AMT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this market support amounts for supported amounts</description>
        <label>NRT Has Submitted Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NRT_Hide_Held_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field hides held column from NRT overlay.</description>
        <label>NRT Hide Held Column</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>